@@ -1,0 +1,7 @@
+package models;
+
+public class ItemNullTitleException extends Exception {
+	public ItemNullTitleException(String str) {
+		super(str);
+	}
+}
